--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ button {
   padding: 15px 30px;
   font-size: 18px;
   font-family: 'Arial', 'Helvetica', sans-serif;
-  background-color: #0a2b57;
+  background-color: #ff81a7;
   color: white;
   border: none;
   border-radius: 5px;
@@ -39,7 +39,7 @@ button {
 }
 
 button:hover {
-  background-color: #1b53a7;
+  background-color: #ff94b4;
 }
 
 .notification {
@@ -146,4 +146,8 @@ button:hover {
 	color: rgb(247, 75, 104);
 	font-family: "Raleway", sans-serif;
 	font-size: 35pt;
+}
+
+a {
+  opacity: 0;  
 }
