--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
   position: fixed;
   top: 30px;
   left: 50%;
-  font-size: 50px;
+  font-size: 5vh;
   transform: translateX(-50%);
 }
 a {
